--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,13 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -115,6 +119,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "budgetApp"
 }
